# classification-ml-project

./: .gitignore  README.md  matrix_visualizations.ipynb  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 01_data_exploreation.ipynb  02_binary_classification.ipynb  03_multiclass_classification.ipynb  04_model_evaluation.ipynb  05_retrain_wine_multiclass.ipynb  learning_logistic_regression.ipynb  matrix_visualizations.ipynb
scripts/: repair_notebooks.py
src/: data_preprocessing.py  evaluation.py  feature_engineering.py  models.py
tests/: test_evaluation.py  test_feature_engineering.py  test_models.py  test_preprocessing.py  test_wine_notebook.py
