[project]
name = "matrix-viz"
version = "0.1.0"
description = "Matrix operations and visualization with pytest"
authors = [
    { name = "Akai Kaede", email = "it.scope@gmail.com" }
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
